# patchtest-rs

./: Cargo.toml  README.md
src/: checks.rs  config.rs  fetch.rs  main.rs  patch.rs  report.rs
src/checks/: mbox_author.rs  mod.rs
tests/files/: 0001-test-patch.patch  Author.test_author_valid.1.fail  Author.test_author_valid.1.pass  Author.test_author_valid.2.fail  Author.test_author_valid.2.pass  CommitMessage.test_commit_message_presence.fail  CommitMessage.test_commit_message_presence.pass
