[package]
name = "patchtest-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
git2 = "0.15.0"
regex = "1.6.0"
serde = {version="1.0.144", features=["derive"]}
serde_yaml = "0.9.11"
structopt = "0.3.26"
thiserror = "1.0.33"
